<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_my_profile"
                android:icon="@drawable/ic_menu_person"
                android:title="@string/menu_myProfile" />
        <item
                android:id="@+id/nav_mygoals"
                android:icon="@drawable/ic_menu_star_black_24dp"
                android:title="@string/menu_myGoals" />
        <item
                android:id="@+id/nav_how_to_play"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_howToPlay" />
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
    </group>



</menu>


