<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/player1Text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginBackground"
        android:backgroundTint="@color/loginBackground"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="308dp"
            android:autoText="true"
            android:autofillHints=""
            android:background="@drawable/edit_text_shape"
            android:capitalize="none"
            android:fontFamily="monospace"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/greenTextColor"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/playerStartText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="2dp"
            android:text="@string/player1start"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintEnd_toStartOf="@+id/forgot_password_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/username" />

    <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/colorGreen"
            android:enabled="false"
            android:fontFamily="monospace"
            android:text="@string/login"
            android:textColor="@color/loginBackground"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.0" />

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_shape"
            android:fontFamily="monospace"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="8dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/greenTextColor"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
            android:id="@+id/createNewAccount"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/buttonCreateAccount"
            android:fontFamily="monospace"
            android:text="@string/createNewAccount"
            android:textColor="@color/loginBackground"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="1.0" />

    <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="146dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo_3" />

    <TextView
            android:id="@+id/textUnderLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            android:fontFamily="monospace"
            android:text="@string/descriptionUnderLogo"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
            android:id="@+id/loginProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/username" />

    <TextView
            android:id="@+id/verificationMailEText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/Resend_verification_mail"
            android:textAlignment="center"
            android:textColor="@color/greenTextColor"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/createNewAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="0.08" />

    <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:fontFamily="monospace"
            android:text="@string/forgotPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/greenTextColor"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/playerStartText"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toTopOf="@+id/playerStartText"
            app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>