<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/BackGroundGray">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sttgnsFgConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/BackGroundGray">

        <TextView
                android:id="@+id/sttngsPpHeaderTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/sttngsFgProfilePicture"
                android:textAlignment="textStart"
                android:textColor="@color/greenTextColor"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/sttngsFgChangePpText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif"
                android:text="@string/sttngsFgChangePp"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsPpHeaderTextView" />

        <TextView
                android:id="@+id/sttngsEmailHeaderTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/EmailAndPassword"
                android:textColor="@color/greenTextColor"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsChangeUsernameButton" />

        <Button
                android:id="@+id/sttngsChangemailButton"
                android:layout_width="85dp"
                android:layout_height="35dp"
                android:layout_marginStart="295dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/colorGreen"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:fontFamily="monospace"
                android:text="@string/change"
                android:textColor="@color/loginBackground"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/sttngsEmailPasswordEt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsEmailPasswordEt" />

        <EditText
                android:id="@+id/sttngsNewEmailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:backgroundTint="@color/greenTextColor"
                android:ems="10"
                android:fontFamily="monospace"
                android:gravity="start"
                android:hint="@string/newEmail"
                android:inputType="textEmailAddress"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/greenTextColor"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsDescriptionTextView" />

        <TextView
                android:id="@+id/changeEmailText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/changeEmail"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsEmailHeaderTextView" />

        <TextView
                android:id="@+id/sttngsUserNameHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:fontFamily="sans-serif"
                android:text="@string/justUserName"
                android:textColor="@color/greenTextColor"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsClickHereText" />

        <EditText
                android:id="@+id/sttngsNewUserNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/greenTextColor"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/newUsername"
                android:inputType="textEmailAddress"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/greenTextColor"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsChangeUsernameText"
                android:autofillHints="" />

        <Button
                android:id="@+id/sttngsChangeUsernameButton"
                android:layout_width="85dp"
                android:layout_height="35dp"
                android:layout_marginStart="295dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/colorGreen"
                android:enabled="true"
                android:fontFamily="monospace"
                android:text="@string/change"
                android:textColor="@color/loginBackground"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/sttngsNewUserNameEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsNewUserNameEditText" />

        <TextView
                android:id="@+id/sttngsChangeUsernameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/sttngsFgChangeUsername"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsUserNameHeaderText" />

        <TextView
                android:id="@+id/sttngsClickHereText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif"
                android:text="@string/clickHere"
                android:textColor="@color/lightGrayColor"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsFgChangePpText" />

        <TextView
                android:id="@+id/sttngsDescriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="monospace"
                android:text="@string/description"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changeEmailText" />

        <EditText
                android:id="@+id/sttngsEmailPasswordEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:backgroundTint="@color/greenTextColor"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/greenTextColor"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsNewEmailEditText" />

        <TextView
                android:id="@+id/sttngsChangePasswordText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/sttngsFgChangePassword"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsChangemailButton" />

        <EditText
                android:id="@+id/sttngsChangePasswordEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:backgroundTint="@color/greenTextColor"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/greenTextColor"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsChangePasswordText" />

        <EditText
                android:id="@+id/sttngsNewPasswordEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:backgroundTint="@color/greenTextColor"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/greenTextColor"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsChangePasswordEt" />

        <EditText
                android:id="@+id/sttngsRepeatNewPasswordEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:backgroundTint="@color/greenTextColor"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/repeatNewPassword"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/greenTextColor"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsNewPasswordEt" />

        <Button
                android:id="@+id/sttngsChangePasswordButton"
                android:layout_width="85dp"
                android:layout_height="35dp"
                android:layout_marginStart="295dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/colorGreen"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:fontFamily="monospace"
                android:text="@string/change"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/sttngsRepeatNewPasswordEt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sttngsRepeatNewPasswordEt" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>